--- a/src/components/feednotification.css
+++ b/src/components/feednotification.css
@@ -1,6 +1,6 @@
 .feed-notification{
 	padding: 5px 5px 5px 0px !important;
-	border: 1px #547980 solid;
+	border: 1px #45ADA8 solid;
 	display: flex;
 	align-items: center;
 	justify-content: center;
