--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,3 +1,3 @@
 .home{
-	height: calc(100vh - 52px);
+	height: 90vh;
 }
