--- a/src/components/line.css
+++ b/src/components/line.css
@@ -1,7 +1,7 @@
 hr.style14 { 
   border: 0; 
   height: 1px; 
-  background-color: #a6acbc;
+  background-color: #45ADA8;
   background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
   background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
   background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
