--- a/src/components/sidebar-line.css
+++ b/src/components/sidebar-line.css
@@ -15,7 +15,7 @@
 	width: 30px;
 	text-align: center;
 	border-radius: 50%;
-	border: 2px black solid;
+	border: 2px #45ADA8 solid;
 	padding: 0px;
 }
 .number p{
